# CodeXray

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  INTENT.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  vibe-coding-check.yml
.husky/: pre-commit
.roboco/: config.json
docs/: constraints.md  flow.md  handoff-to-codex.md  intent.md  vision.md
docs/openspec-drafts/: 01-inventory-cli.md  02-dependency-graph.md
docs/reviews/: 2026-04-30-categorized-next-actions-v2.md  2026-04-30-categorized-next-actions.md
docs/reviews/prompts/: 2026-04-30-categorized-next-actions-prompt-v2.md  2026-04-30-categorized-next-actions-prompt.md
docs/validation/: briefing-narrative-depth-civilsim.md  briefing-narrative-depth-self.md  briefing-persona-split-self.md  briefing-presentation-civilsim.md  briefing-presentation-self.md  briefing-rebuild-aquaview.md  briefing-rebuild-self.md  codebase-briefing-civilsim.md  codebase-briefing-self.md  cross-platform-ci-setup-results.md  dashboard-civilsim.html  dashboard-civilsim.md  dashboard-self.html  dashboard-self.md  dynamic-panel-insights-civilsim.md  dynamic-panel-insights-self.md  entrypoints-civilsim.md  entrypoints-self.md  graph-csharp-civilsim.md  graph-csharp-types-civilsim.md  graph-first-run.md  hotspots-civilsim.md  hotspots-self.md  inventory-first-run.md  metrics-civilsim.md  metrics-self.md  non-roboco-validation-results.md  pypi-distribution-results.md  quality-civilsim.md  quality-self.md  report-civilsim.md  report-self.md  review-civilsim.md  review-self.md  simplify-briefing-navigation.md  summary-civilsim.md  summary-self.md  vibe-coding-report-civilsim.md  vibe-coding-report-self.md  vibe-detection-rebalance-fastapi.md  (+5 more)
docs/validation/non-roboco-data/: CivilSim.json  CodeXray.json  OpenSpec.json  StructFlow.json  fastapi.json  graphify.json  (+3 more)
docs/vibe-coding/: 01-intent.md  02-requirements.md  03-research.md  04-plan.md  05-implement.md  retro-2026-04-28.md  retro-2026-04-29-roboco-underuse.md  retro-2026-05-02.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: validate_external_repos.py
src/codexray/: cli.py  inventory.py  language.py  loc.py  render.py  walk.py
tests/: test_ai_adapters.py  test_ai_briefing.py  test_ai_build.py  test_ai_cli.py  test_ai_prompt.py  test_briefing.py  test_cli.py  test_dashboard.py  test_entrypoints_cli.py  test_entrypoints_csharp.py  test_entrypoints_manifest.py  test_entrypoints_python.py  test_graph_build.py  test_graph_cli.py  test_graph_csharp.py  test_graph_csharp_index.py  test_graph_csharp_parser.py  test_graph_csharp_types.py  test_graph_js_parser.py  test_graph_python_parser.py  test_graph_resolve.py  test_hotspots_build.py  test_hotspots_cli.py  test_hotspots_git_log.py  test_insights.py  test_inventory.py  test_language.py  test_loc.py  test_metrics_build.py  test_metrics_cli.py  test_metrics_scc.py  test_quality_cli.py  test_quality_cohesion.py  test_quality_coupling.py  test_quality_documentation.py  test_quality_scoring.py  test_quality_test.py  test_report_cli.py  test_report_recommendations.py  test_report_strengths_weaknesses.py  (+6 more)
tests/scripts/: test_validate_external_repos.py
(+329 files in other folders)
