[project]
name = "codexray"
version = "0.1.0"
description = "구조 분석 + 품질 평가 + 다음 행동 제안을 한 번에 주는 코드베이스 X-ray"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JeonHyunOh" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pathspec>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.scripts]
codexray = "codexray.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexray"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/codexray/dashboard/template.py" = ["E501"]
