[project]
name = "codexray"
version = "0.1.0"
description = "구조 분석 + 품질 평가 + 다음 행동 제안을 한 번에 주는 코드베이스 X-ray"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JeonHyunOh", email = "gusdh2510@gmail.com" }]
keywords = [
    "code-analysis",
    "vibe-coding",
    "ai-assisted-development",
    "codebase-visualization",
    "quality-metrics",
    "dependency-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pathspec>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/gusdh8380/CodeXray"
Repository = "https://github.com/gusdh8380/CodeXray"
Issues = "https://github.com/gusdh8380/CodeXray/issues"

[project.scripts]
codexray = "codexray.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexray"]

# frontend/dist (React SPA 빌드 산출물) 을 패키지 내부 codexray/_frontend 로 포함.
# `cd frontend && npm run build` 가 publish 직전에 선행되어야 함.
[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "codexray/_frontend"

[tool.hatch.build.targets.sdist]
include = [
    "src/codexray",
    "frontend/dist",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/codexray/dashboard/template.py" = ["E501"]
